# fast_api

./: .env.example  .gitignore  Dockerfile  ESTIMATION.md  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
commons/: __init__.py
commons/exceptions/: instance.py
commons/models/: __init__.py
commons/repositories/: __init__.py  mogodb.py
core/: __init__.py  database.py  repository.py  serializer.py
core/exceptions/: denied.py  unauthorized.py
core/managers/: __init__.py  mongodb.py
core/middleware/: auth.py
core/models/: __init__.py
core/permissions/: auth.py
roles/helpers/: enum.py
users/: __init__.py  model.py  repository.py  router.py
users/helpers/: auth.py
users/models/: user.py
users/routers/: auth.py  crud.py
users/serializers/: user.py
